feat: Finalizando primeira versão dos endpoits de produto